fix spacing

--- a/src/components/expandable-checkbox-list/expandable-checkbox-list.scss
+++ b/src/components/expandable-checkbox-list/expandable-checkbox-list.scss
@@ -25,7 +25,7 @@
   }
 }
 .expandable-checkbox-list {
-  margin-top: 37px;
+  margin-top: 25px;
 }
 
 .expandable-checkbox-list:not(.expandable-checkbox-list_closed)>.expandable-checkbox-list__btn::after {
