--- a/src/pages/ui-kit.scss
+++ b/src/pages/ui-kit.scss
@@ -104,7 +104,7 @@
   display: grid;
   margin: 0px 140px;
   padding-top: 130px;
-  grid-template: 2fr 1fr 1fr 1fr / repeat(3, 1fr);
+  grid-template: 630px 1fr 1fr 200px / repeat(3, 1fr);
   gap: 65px 100px;
 }
 
